samples/_failures_safe/1761482343_53abfd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4de29830.c: In function ‘main’:
./samples/SAFE/__tmp_4de29830.c:131:30: error: missing terminating " character
  131 |     add_log_entry(&analyzer, "2024-01-15 10:
      |                              ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4de29830.c:131:5: error: expected expression at end of input
  131 |     add_log_entry(&analyzer, "2024-01-15 10:
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_4de29830.c:131:5: error: too few arguments to function ‘add_log_entry’
./samples/SAFE/__tmp_4de29830.c:53:5: note: declared here
   53 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_4de29830.c:131:5: error: expected declaration or statement at end of input
  131 |     add_log_entry(&analyzer, "2024-01-15 10:
      |     ^~~~~~~~~~~~~
